# MAEST

./: .gitignore  README.md  config_updates.py  discogs-effnet-bs64-1.json  ex_discogs.py  ex_maest.py  ex_maest519.sh  ex_tl.py  extract_melbands.py  fix_gt_suffix.py  generate_gt.py  make_small_gt_mtt.py  melspectrogram.npy  pipeline.py  preds_maest_discogs-maest-30s-pw-129e.npy  preds_maest_discogs-maest-30s-pw-73e-ts.npy  pyproject.toml  requirements.txt  test.py  test_rep.py  test_vs_hf.py  upload.py
.github/workflows/: python-tests.yml
datasets/mtt/: groundtruth-all.pk.orig  groundtruth-test.pk  groundtruth-train.pk  groundtruth-validation.pk  ohe.pk  preprocess.py
discogs/: datamodule.py  dataset.py
helpers/: audiodatasets.py  melspectrogram_extractor.py  mixup.py  models_size.py  ramp.py  spec_masking.py  swa_callback.py  workersinit.py
maest/: feature_extraction_maest.py
models/: __init__.py  discogs_labels.py  maest.py  module.py  passt.py  preprocess.py
models/helpers/: melspectrogram.py  melspectrogram_extractor.py  vit_helpers.py
packaging/: convert_to_onnx.sh  onnx_to_tf.sh  push_to_hub.py  safetensors_to_pytorch.py
tests/: test_maest.py
