[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maest"
version = "0.1.0"
description = "MAEST model package"
authors = [
    { name = "Pablo Alonso", email = "pablo.alonso@upf.edu" }
]
license = { text = "AGPL-3.0 license" }
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "essentia",
    "timm~=0.9",
    "torchmetrics~=0.11.4",
    "tqdm~=4.65",
    "sacred~=0.8.4",
    "lightning~=2.3",
    "scikit-learn~=1.5",
    "tensorboard~=2.13.0",
    "numpy~=1.26",
    "torch",
]

[project.urls]
homepage = "https://github.com/palonso/maest"
repository = "https://github.com/palonso/maest"

[tool.setuptools]
packages = ["maest", "maest.helpers"] 

[tool.setuptools.package-dir]
"maest" = "models"
